# framework-tutorials

./: Makefile  README.md
fastapi/: Makefile  README.md  pyproject.toml
fastapi/app/: main.py
fastapi/app/db/: day_13.db
fastapi/app/routes/: __init__.py  day_1.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  example.py
fastapi/app/routes/day13/: __init__.py  router.py
fastapi/app/routes/day13/db/: day_13.sqlite  models.py
fastapi/app/routes/day18/: __init__.py  order_service.py  region_service.py  router.py
fastapi/app/routes/day18/db/: day_18.sqlite  models.py
fastapi/app/routes/day19/: __init__.py  connection_manager.py  router.py
fastapi/app/routes/day20/: __init__.py  router.py
fastapi/app/routes/day21/: __init__.py  router.py
fastapi/app/routes/day21/libs/: country_map.csv
fastapi/app/routes/day21/utils/: country.py  dms.py
fastapi/app/routes/day22/: __init__.py  models.py  router.py
fastapi/app/routes/day4/: __init__.py  request_models.py  router.py
