[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Owen <33508519+lxxonx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
httpx = "^0.26.0"
pillow = "^10.2.0"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
ulid-py = "^1.1.0"
s2sphere = "^0.2.5"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
